--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:extension.sayHello"
+    "onCommand:jsonbro.formatJson"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "extension.sayHello",
-        "title": "JSONBro: Say Hello"
+        "command": "jsonbro.formatJson",
+        "title": "JSONBro: Format JSON"
       }
     ]
   },
