--- a/package.json
+++ b/package.json
@@ -10,31 +10,37 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:jsonbro.formatJson"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "jsonbro.formatJson",
         "title": "JSONBro: Format JSON"
+      },
+      {
+        "command": "jsonbro.validateJson",
+        "title": "JSONBro: Validate JSON"
       }
     ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "package": "vsce package"
+    "compile": "webpack --mode production",
+    "compile:dev": "webpack --mode development",
+    "watch": "webpack --mode development --watch",
+    "package": "vsce package",
+    "clean": "rimraf out"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
     "@types/vscode": "^1.81.0",
     "typescript": "^5.0.2",
-    "vsce": "^2.15.0"
+    "vsce": "^2.15.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "ts-loader": "^9.4.4",
+    "rimraf": "^5.0.1"
   },
-  "dependencies": {
-    "feather-icons": "^4.29.2"
-  }
+  "dependencies": {}
 }
