--- a/package.json
+++ b/package.json
@@ -31,17 +31,20 @@
     "compile:dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
     "package": "npm run vscode:prepublish && vsce package",
-    "clean": "rimraf out"
+    "clean": "rimraf out",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^16.11.7",
     "@types/vscode": "^1.81.0",
+    "jest": "^30.2.0",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.4.4",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.0.2",
     "vsce": "^2.15.0",
     "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4",
-    "ts-loader": "^9.4.4",
-    "rimraf": "^5.0.1"
-  },
-  "dependencies": {}
+    "webpack-cli": "^5.1.4"
+  }
 }
