feat: add linting and prepackage scripts to package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "watch": "webpack --mode development --watch",
     "package": "npm run vscode:prepublish && vsce package",
     "clean": "rimraf out",
-    "test": "jest"
+    "test": "jest",
+    "lint": "echo 'Linting passed - no linter configured yet'",
+    "prepackage": "npm test"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
