feat: update command registration to remove JSON validation and ensure consistency

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "title": "JSONBro: Format JSON"
       },
       {
-        "command": "jsonbro.validateJson",
-        "title": "JSONBro: Validate JSON"
+        "command": "jsonbro.diffJson",
+        "title": "JSONBro: Diff JSON"
       }
     ]
   },
