--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,16 @@ jobs:
       
     - name: Update package.json version to match tag
       run: |
-        npm version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version
+        CURRENT_VERSION=$(node -p "require('./package.json').version")
+        TARGET_VERSION=${{ steps.get_version.outputs.VERSION }}
+        echo "Current version: $CURRENT_VERSION"
+        echo "Target version: $TARGET_VERSION"
+        if [ "$CURRENT_VERSION" != "$TARGET_VERSION" ]; then
+          npm version $TARGET_VERSION --no-git-tag-version
+          echo "Version updated from $CURRENT_VERSION to $TARGET_VERSION"
+        else
+          echo "Version is already $TARGET_VERSION, skipping update"
+        fi
         
     - name: Package extension
       run: vsce package --out jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix
