--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,25 +59,13 @@ jobs:
         sha256sum jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix > jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix.sha256
         cat jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix.sha256
       
-    - name: Upload VSIX to release
-      uses: actions/upload-release-asset@v1
+    - name: Upload VSIX and checksum to release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix
-        asset_name: jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix
-        asset_content_type: application/zip
-        
-    - name: Upload checksum to release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix.sha256
-        asset_name: jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix.sha256
-        asset_content_type: text/plain
+      run: |
+        gh release upload ${{ github.ref_name }} \
+          jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix \
+          jsonbro-${{ steps.get_version.outputs.VERSION }}.vsix.sha256
         
     - name: Store build artifacts
       uses: actions/upload-artifact@v4
